--- a/weka-custom-image/shared_ubuntu20_eastus2euap.json
+++ b/weka-custom-image/shared_ubuntu20_eastus2euap.json
@@ -6,7 +6,7 @@
     "client_secret": "{{env `CLIENT_SECRET`}}",
     "tenant_id": "{{env `TENANT_ID`}}",
     "image_rg_name": "{{env `IMAGE_RG_NAME`}}",
-    "region": "East US",
+    "region": "eastus2euap",
     "token": "{{env `GET_WEKA_IO_TOKEN`}}",
     "weka_version": "4.2.5"
   },
@@ -28,30 +28,7 @@
         "image_name": "ubuntu20.04",
         "image_version": "2.0.3",
         "replication_regions": [
-          "eastus",
-          "eastus2",
-          "brazilsouth",
-          "canadacentral",
-          "centralus",
-          "northcentralus",
-          "southcentralus",
-          "westus",
-          "westus2",
-          "westus3",
-          "francecentral",
-          "germanywestcentral",
-          "northeurope",
-          "westeurope",
-          "uksouth",
-          "swedencentral",
-          "qatarcentral",
-          "australiaeast",
-          "australiasoutheast",
-          "centralindia",
-          "japaneast",
-          "eastasia",
-          "southeastasia",
-          "uaenorth"
+          "eastus2euap"
         ]
       },
       "azure_tags": {
